fix spacing between headers

--- a/shared/css/course-blocks.scss
+++ b/shared/css/course-blocks.scss
@@ -23,6 +23,7 @@
 
 .coursesheader {
   h2 {
+    margin-top: 0px;
     margin-bottom: 5px;
   }
 }
